Fix horizontal scroll for the table

--- a/src/data_management/scenarios/Scenarios.css
+++ b/src/data_management/scenarios/Scenarios.css
@@ -57,6 +57,7 @@
 }
 
 .tableHeader {
+    min-width: 500px;
     display: flex;
     align-items: center;
     height: 50px;
